Reduce score font size to fix text wrapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,7 @@ header {
 }
 
 .score-text {
-    font-size: 3rem;
+    font-size: 2.6rem;
 }
 
 #computer-score-bar {
